Complete tags api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/team-3
 spring.datasource.username=postgres
-spring.datasource.password=bondstone
+spring.datasource.password=i<3Lydia
 
 spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8085
