--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/team-3
 spring.datasource.username=postgres
-spring.datasource.password=i<3Lydia
+spring.datasource.password=bondstone
 
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8085
+server.port=8080
